--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
                 <a href="#">Home</a>
               </li>
               <li>
-                <a href="#">About</a>
+                <a href="#about">About</a>
               </li>
               <li>
-                <a href="#">services</a>
+                <a href="#services">services</a>
               </li>
               <li>
-                <a href="#">gallery</a>
+                <a href="#gallery">gallery</a>
               </li>
               <li>
-                <a href="#">contact</a>
+                <a href="#contact">contact</a>
               </li>
             </ul>
           </div>
@@ -51,7 +51,7 @@
     </section>
     <!-- Banner area ends -->
     <!-- About area starts -->
-    <section class="about-area">
+    <section class="about-area" id="about">
       <div class="container">
         <div class="section-title">
           <h1>welcome to our website</h1>
@@ -78,7 +78,7 @@
     </section>
     <!-- About area ends -->
     <!-- Service area starts -->
-    <section class="service-area">
+    <section class="service-area" id="services>
       <div class="container">
         <div class="section-title">
           <h1>our services</h1>
@@ -107,7 +107,7 @@
     </section>
     <!-- Service area ends -->
     <!-- Gallery area starts -->
-    <section class="gallery-area">
+    <section class="gallery-area" id="gallery">
       <div class="container">
         <div class="section-title">
           <h1>gallery</h1>
@@ -142,7 +142,7 @@
     </section>
     <!-- Gallery area ends -->
     <!-- Contact area starts -->
-    <section class="contact-area">
+    <section class="contact-area" id="contact">
       <div class="container">
         <div class="container">
           <div class="section-title">
